Prevent layout shift

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -82,6 +82,10 @@ html {
 html.prevent-scroll {
   overflow-y: hidden;
 }
+html.lightbox-loading,
+html.lightbox-loading * {
+  cursor: wait !important;
+}
 
 .prose > ul > li:last-child {
   margin-bottom: 1.25em;
